# secured-app-android

./: .gitignore  Android.mk  Makefile.am  README.md  all_mks  config.h  configure.ac
NewPlugins/CrossCompilandi/nettle-2.7.1/: nettle-stdint.h
NewPlugins/CrossCompilandiv7/gmp-5.0.5/: config.h  gen-bases  gen-fac_ui  gen-fib  gen-psqr  gen-trialdivtab
NewPlugins/CrossCompilandiv7/gnutls-3.3.9/: config.h
NewPlugins/CrossCompilandiv7/nettle-2.7.1/: aes-decrypt-internal.po  aes-decrypt.po  aes-encrypt-internal.po  aes-encrypt-table.po  aes-encrypt.po  aes-meta.po  aes-set-decrypt-key.po  aes-set-encrypt-key.po  aesdata  arcfour-crypt.po  arcfour-meta.po  arcfour.po  arctwo-meta.po  arctwo.po  asm.d  base16-decode.po  base16-encode.po  base16-meta.po  base64-decode.po  base64-encode.po  base64-meta.po  bignum-next-prime.po  bignum-random-prime.po  bignum-random.po  bignum.po  blowfish.po  buffer-init.po  buffer.po  camellia-crypt-internal.po  camellia-crypt.po  camellia-meta.po  camellia-set-decrypt-key.po  camellia-set-encrypt-key.po  camellia-table.po  cast128-meta.po  cast128.po  cbc.po  cnd-copy.po  config.h  config.m4  (+185 more)
NewPlugins/GeneratiLibintlROTTO/Eprefix/: .directory
NewPlugins/glib-2.35.8-for-android-a72902db379d92b3f2fc6069acb4f3f931eba17e/core/: uri-info.txt
NewPlugins/glib-2.35.8-for-android-a72902db379d92b3f2fc6069acb4f3f931eba17e/dhcpcd/: url-info.txt
NewPlugins/glib-2.35.8-for-android-a72902db379d92b3f2fc6069acb4f3f931eba17e/glib-2.35.8/: ChangeLog  README  config.h.LINUX  config.h.in  config.h.win32  config.h.win32.in  config.lt  gio-2.0.pc  gio-unix-2.0.pc  gio-windows-2.0.pc  glib-2.0.pc  glib-gettextize  glib-zip  glib.WK3  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc
NewPlugins/glib-2.35.8-for-android-a72902db379d92b3f2fc6069acb4f3f931eba17e/icu4c/: Android.mk  url-info.txt
NewPlugins/glib-2.35.8-for-android-a72902db379d92b3f2fc6069acb4f3f931eba17e/libffi-3.0.12/: url-link.txt
NewPlugins/glib-2.35.8-for-android-a72902db379d92b3f2fc6069acb4f3f931eba17e/libsoup/: config.h.LINUX
NewPlugins/glib-2.35.8-for-android-a72902db379d92b3f2fc6069acb4f3f931eba17e/libxml2/: url-info.txt
docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
src/: Makefile.am
src/frontends/android/: AndroidManifest.xml
src/include/: Makefile.am
src/libcharon/: Android.mk  Makefile.am
src/libcharon/plugins/oat_attest/: Makefile.am  oat_attest_listener.c  oat_attest_listener.h  oat_attest_plugin.c  oat_attest_plugin.h
src/libjson-c/: Android.mk  Makefile.am  config.h  config.h.in  configure.ac  json-c-uninstalled.pc  json-c.pc  random_seed.c
src/libstrongswan/: Android.mk
src/starter/: keywords.c
src/stroke/: stroke_keywords.c
(+559 files in other folders)
